# Complete-Social-Network-Web-App

./: .dockerignore  .env.example  .gitignore  Dockerfile  Gap.txt  LICENSE  Notes.txt  README.md  docker-compose.yml  package-lock.json  pyproject.toml
apps/core/: middleware.py  urls.py  views.py
apps/core/templates/core/: base.html  home.html  search.html
apps/core/templates/core/errors/: 404.html  500.html
apps/core/templates/core/includes/: _left_sidebar.html  (+3 more)
apps/group/: admin.py  models.py  urls.py  views.py
apps/group/migrations/: 0001_initial.py
apps/group/templates/group/: group.html  group_list.html
apps/notifications/: models.py  signals.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/templates/notifications/: notification_list.html
apps/post/: models.py  urls.py  views.py
apps/post/migrations/: 0001_initial.py  0002_alter_post_group.py  0003_alter_comment_options.py  0004_post_viewers.py  0005_postimage.py  0006_alter_post_options.py
apps/post/templates/post/: feed.html  post_detail.html  post_list.html  post_update.html
apps/post/templatetags/: post_tags.py
apps/user/: context_processors.py  models.py  signals.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
apps/user/templates/user/: profile.html
config/: urls.py
config/settings/: base.py  dev.py  prod.py
static_src/sass/: main.scss
static_src/sass/base/: _variables.scss
static_src/sass/components/: _feed.scss  _forms.scss  _navigation.scss  _profile.scss
static_src/sass/layout/: _mobile_nav.scss  _sidebar.scss
(+25 files in other folders)
