[project]
name = "complete-modern-social-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0",
    "django-allauth>=65.13.1",
    "django-debug-toolbar>=6.1.0",
    "django-environ>=0.12.0",
    "django-htmx>=1.27.0",
    "django-redis>=6.0.0",
    "gunicorn>=23.0.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
]
